# NCG_AI_Base

./: .env.example  README.md  pyproject.toml
examples/: device-override.yaml
src/network_config_gen/: __init__.py  exceptions.py
src/network_config_gen/generators/: __init__.py  config_generator.py
src/network_config_gen/integrations/: mock_data.py  secretserver.py
src/network_config_gen/templates/: __init__.py  loader.py
templates/: base.j2
